Refactor backend structure and disable actions